--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -10,13 +10,15 @@
 	"dependencies": {
 		"@voucher-ping/db": "workspace:*",
 		"react": "^18.3.1",
-		"react-dom": "^18.3.1"
+		"react-dom": "^18.3.1",
+		"sql.js": "^1.13.0"
 	},
 	"devDependencies": {
+		"@tailwindcss/vite": "4.0.17",
 		"@types/react": "^18.3.18",
 		"@types/react-dom": "^18.3.5",
+		"@types/sql.js": "^1.4.9",
 		"@vitejs/plugin-react": "^4.3.4",
-		"@tailwindcss/vite": "4.0.17",
 		"tailwindcss": "^4.0.14",
 		"typescript": "^5.8.2",
 		"vite": "^6.2.2"
