--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
 	},
 	"devDependencies": {
 		"@types/bun": "1.2.18",
-		"@types/node": "^22.13.10",
+		"@types/node": "24.0.10",
 		"prettier": "^3.5.3",
 		"typescript": "^5.8.2"
 	}
