--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -3,6 +3,13 @@
 	"version": "0.1.0",
 	"type": "module",
 	"main": "src/index.ts",
+	"types": "src/index.ts",
+	"exports": {
+		".": {
+			"import": "./src/index.ts",
+			"types": "./src/index.ts"
+		}
+	},
 	"scripts": {
 		"build": "tsc",
 		"start": "bun src/index.ts",
