--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
 	],
 	"scripts": {
 		"dev": "bun run --cwd packages/web dev",
-		"build": "bun run --cwd packages/web build",
+		"build": "cd packages/db && bunx prisma generate && cd ../web && tsc && vite build",
 		"scrape": "bun run --cwd packages/scraper start",
 		"format": "prettier --write .",
 		"db:migrate": "bun --cwd packages/db db:migrate"
