--- a/packages/api/tsconfig.json
+++ b/packages/api/tsconfig.json
@@ -7,7 +7,11 @@
 		"esModuleInterop": true,
 		"skipLibCheck": true,
 		"forceConsistentCasingInFileNames": true,
-		"types": ["bun-types"]
+		"types": ["bun-types"],
+
+		// to use react email templates
+		"jsx": "react-jsx",
+		"jsxImportSource": "react"
 	},
 	"include": ["src/**/*"]
 }
